--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -147,6 +147,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 200px;
 }
 
 /* Adjust slide styling */
@@ -155,13 +156,14 @@
     padding: 20px;
     text-align: center;
     box-sizing: border-box;
-    min-height: 150px;
+    min-height: 100%;
     align-items: center;
     justify-content: center;
     background-color: white;
     border-radius: 5px;
     margin: 0 10px; /* Adds a bit of margin to the left and right */
     width: 80%;
+    overflow: hidden;
 }
 
 /* Adjust navigation buttons */
@@ -312,6 +314,12 @@ button.custom-prev-slide:hover, button.custom-next-slide:hover {
             </div>
             <div class="slide">
                 <p>"One thing I learned about myself during IVOC is that I am who I am and I don't have to try to please anybody else by being someone that I'm not."</p>
+            </div>
+            <div class="slide">
+                <p>"The thing I like about IVOC is how the whole thing is just expressing yourself with music and words. It feels like a safe place where you aren't judged"</p>
+            </div>
+            <div class="slide">
+                <p>"Something I learned about myself is how to work with others. For example, how to help (another member of the group) when he didn't know how to add on to the beat for the first time in the studio"</p>
             </div>
             <button class="prev">&#10094;</button>
             <button class="next">&#10095;</button>
