--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -377,21 +377,26 @@ button.custom-prev-slide:hover, button.custom-next-slide:hover {
 <script>
 
 document.addEventListener('DOMContentLoaded', function () {
-    var maxValue = 350; 
+    var maxValue = 350;
     var currentValue = 244;
     var elem = document.getElementById('impactProgressBar');
     var width = 0;
-    var id = setInterval(frame, 15);
+    var startTime = null;
 
-    function frame() {
-        if (width >= currentValue) {
-            clearInterval(id);
-        } else {
-            width++;
-            elem.style.width = (width / maxValue) * 100 + '%';
-            elem.innerHTML = width + ' youth impacted since 2021';
+    function frame(timestamp) {
+        if (!startTime) startTime = timestamp;
+        var progress = timestamp - startTime;
+        width = Math.min(progress / 10, currentValue); // Adjust the divisor to control the speed
+
+        elem.style.width = (width / maxValue) * 100 + '%';
+        elem.innerHTML = currentValue + ' youth impacted since 2021';
+
+        if (width < currentValue) {
+            requestAnimationFrame(frame);
         }
     }
+
+    requestAnimationFrame(frame);
 });
 
 document.addEventListener('DOMContentLoaded', function () {
