--- a/hub/migrations/templates/base.html
+++ b/hub/migrations/templates/base.html
@@ -663,19 +663,19 @@
                         <img src="{% static 'images/network3.png' %}" alt="Social-Media" class="dropdown-toggle" id="socialmediaMenuButton" aria-haspopup="true">
                         <div class="dropdown-menu" aria-labelledby="socialmediaMenuButton">
                             <a href="mailto:info@ivocforyouth.com" target="_blank" title="Email Us">
-                                <img src="{% static 'images/MAILtopBar.png' %}" alt="Email" class="email-icon"/> Email Us
+                                <img src="{% static 'images/topbarEMAILr.png' %}" alt="Email" class="email-icon"/> Email Us
                             </a>
                             <a href="https://www.instagram.com/ivocforyouth/" target="_blank" title="Follow us on Instagram">
-                                <img src="{% static 'images/IGtopbar.png' %}" alt="Instagram" class="instagram-icon"/> Instagram
+                                <img src="{% static 'images/topbarIG.png' %}" alt="Instagram" class="instagram-icon"/> Instagram
                             </a>
                             <a href="https://www.facebook.com/InnerVoiceOuterChange" target="_blank" title="Follow us on Facebook">
-                                <img src="{% static 'images/facebookLogo.png' %}" alt="Facebook" class="facebook-icon"/> Facebook
+                                <img src="{% static 'images/topbarFACEBOOK.png' %}" alt="Facebook" class="facebook-icon"/> Facebook
                             </a>
                             <a href="https://www.linkedin.com/company/inner-voice-outer-change/" target="_blank" title="Follow us on LinkedIn">
-                                <img src="{% static 'images/LinkedInTopBar.png' %}" alt="LinkedIn" class="linkedin-icon"/> LinkedIn
+                                <img src="{% static 'images/topbarLINKEDIN.png' %}" alt="LinkedIn" class="linkedin-icon"/> LinkedIn
                             </a>
                             <a href="https://www.youtube.com/@innervoiceouterchange6458" target="_blank" title="Subscribe to our YouTube">
-                                <img src="{% static 'images/youtubetopbar111.png' %}" alt="YouTube" class="youtube-icon" style="padding-right: 0%;"/>&nbsp;YouTube
+                                <img src="{% static 'images/topbarYOUTUBE.png' %}" alt="YouTube" class="youtube-icon" style="padding-right: 0%;"/>&nbsp;YouTube
                             </a>
                         </div>
                     </div>
@@ -712,23 +712,23 @@
             <br>
     
             <a href="mailto:info@ivocforyouth.com" title="Email Us">
-                <img src="{% static 'images/EMAILBLACKFINALE.jpg' %}" alt="Email" class="icon-small" />
+                <img src="{% static 'images/footerEMAIL.jpg' %}" alt="Email" class="icon-small" />
             </a>
     
             <a href="https://www.instagram.com/ivocforyouth/" target="_blank" title="Follow us on Instagram">
-                <img src="{% static 'images/IGBLACKFOOTER5.jpg' %}" alt="Instagram" class="icon-small"/> 
+                <img src="{% static 'images/footerIG.jpg' %}" alt="Instagram" class="icon-small"/> 
             </a>
     
             <a href="https://www.facebook.com/InnerVoiceOuterChange" target="_blank" title="Follow us on Facebook">
-                <img src="{% static 'images/FACEBOOKBLACK2.png' %}" alt="Facebook" class="icon-small"/>
+                <img src="{% static 'images/footerFACEBOOK.png' %}" alt="Facebook" class="icon-small"/>
             </a>
     
             <a href="https://www.linkedin.com/company/inner-voice-outer-change/" target="_blank" title="Follow us on LinkedIn">
-                <img src="{% static 'images/LINKEDINBLACK1.jpg' %}" alt="LinkedIn" class="icon-small"/>
+                <img src="{% static 'images/footerLINKEDIN.jpg' %}" alt="LinkedIn" class="icon-small"/>
             </a>
     
             <a href="https://www.youtube.com/@innervoiceouterchange6458" target="_blank" title="Subscribe to our YouTube">
-                <img src="{% static 'images/YOUTUBEBLACK1.png' %}" alt="YouTube" class="icon-small"/>
+                <img src="{% static 'images/footerYOUTUBE.png' %}" alt="YouTube" class="icon-small"/>
             </a>        
         </div>
 
