--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -493,7 +493,7 @@ html, body {
         <p class="video-description"><b>Event: <i>Summer Jumpoff</i></b>- IVOC's inaugural youth showcase was a night to remember! We saw our students shine as they performed songs and showcased videos they created as a part of IVOC.’s music and videography programs in Worcester, MA.</p>
     </div>
     <div class="video-block">
-        <video width="320" height="240" controls poster="{% static 'images/Project.jpg' %}">
+        <video width="320" height="240" controls poster="{% static 'images/ProjectThumbnail.jpg' %}">
         <source src="{% static 'images/Project.mp4' %}" type="video/mp4">
         Your browser does not support the video tag.
         </video>
