upload fixed changes

--- a/hub/migrations/templates/base.html
+++ b/hub/migrations/templates/base.html
@@ -663,7 +663,7 @@
                         <img src="{% static 'images/network3.png' %}" alt="Social-Media" class="dropdown-toggle" id="socialmediaMenuButton" aria-haspopup="true">
                         <div class="dropdown-menu" aria-labelledby="socialmediaMenuButton">
                             <a href="mailto:info@ivocforyouth.com" target="_blank" title="Email Us">
-                                <img src="{% static 'images/topbarEMAILr.png' %}" alt="Email" class="email-icon"/> Email Us
+                                <img src="{% static 'images/topbarEMAIL.png' %}" alt="Email" class="email-icon"/> Email Us
                             </a>
                             <a href="https://www.instagram.com/ivocforyouth/" target="_blank" title="Follow us on Instagram">
                                 <img src="{% static 'images/topbarIG.png' %}" alt="Instagram" class="instagram-icon"/> Instagram
