--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -257,17 +257,19 @@ html, body {
 .slides-container {
     display: flex;
     transition: transform 0.5s ease-in-out;
-    width: 100%; /* Ensures all slides fit within the container */
+    width: 125%; /* Ensures all slides fit within the container */
 }
 
 .slide {
-    min-width: 60%; /* Ensures each slide takes full width of the container */
+    min-width: 70%; /* Ensures each slide takes full width of the container */
     padding: 20px;
     color: white;
     font-size: 20px;
     font-family: "Georgia", serif;
     text-align: center;
-    padding-left: 20%;
+    padding-left: 15%;
+    padding-right: 5%;
+
 }
 
 .prev, .next {
