--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -368,19 +368,19 @@ button.custom-prev-slide:hover, button.custom-next-slide:hover {
 <div class="custom-image-gallery-slideshow">
     <div class="custom-slide-container">
         <div class="custom-slide">
-            <img src="{% static 'images/IVOCdonate4.jpg' %}" alt="IVOC Visual 1" class="custom-gallery-image">
+            <img src="{% static 'images/grant1.jpg' %}" alt="IVOC Visual 1" class="custom-gallery-image">
         </div>
         <div class="custom-slide">
-            <img src="{% static 'images/IVOCdonate6.jpg' %}" alt="IVOC Visual 2" class="custom-gallery-image" style="width: 70%; height: auto;">
+            <img src="{% static 'images/grant2.jpg' %}" alt="IVOC Visual 2" class="custom-gallery-image" style="width: 70%; height: auto;">
         </div>
         <div class="custom-slide">
-            <img src="{% static 'images/IVOCdonate5.jpg' %}" alt="IVOC Visual 3" class="custom-gallery-image">
+            <img src="{% static 'images/grant3.jpg' %}" alt="IVOC Visual 3" class="custom-gallery-image">
         </div>
         <div class="custom-slide">
-            <img src="{% static 'images/IVOCdonate11.png' %}" alt="IVOC Visual 4" class="custom-gallery-image" style="width: 70%; height: auto;">
+            <img src="{% static 'images/grant4.png' %}" alt="IVOC Visual 4" class="custom-gallery-image" style="width: 70%; height: auto;">
         </div>
         <div class="custom-slide">
-            <img src="{% static 'images/IVOCdonate12.png' %}" alt="IVOC Visual 5" class="custom-gallery-image" style="width: 70%; height: auto;">
+            <img src="{% static 'images/grant5.png' %}" alt="IVOC Visual 5" class="custom-gallery-image" style="width: 70%; height: auto;">
         </div>
     </div>
     <button class="custom-prev-slide">&#10094;</button>
